--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -11,7 +11,9 @@ jobs:
 
       - name: Install dependencies
         run: sudo apt update && sudo apt install -y cmake g++ googletest
-
+        
+      - name: Configure CMake
+        run: cmake -B build -S src
       - name: Configure CMake
         run: cmake -B build
 
