--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,7 +13,7 @@ jobs:
         run: sudo apt update && sudo apt install -y cmake g++ googletest
         
       - name: Configure CMake
-        run: cmake -B build -S src
+        run: cmake -B build -S lab
       - name: Configure CMake
         run: cmake -B build
 
