--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,41 +1,22 @@
-name: C++ CI/CD Pipeline
+name: C++ Tests
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push, pull_request]
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Install dependencies
         run: sudo apt update && sudo apt install -y cmake g++ googletest
-
+      
       - name: Configure CMake
         run: cmake -B build -S lab
 
       - name: Build
         run: cmake --build build
 
-      - name: Run tests and generate XML result
-        run: |
-          ctest --test-dir build --output-on-failure
-          ctest --test-dir build --output-on-failure -T Test --gtest_output=xml:build/test-results/test_results.xml
-
-      - name: List test results
-        run: ls -R build/test-results/
-
-      - name: Upload test results
-        uses: actions/upload-artifact@v3
-        with:
-          name: test-results
-          path: build/test-results/*.xml
-
+      - name: Run tests
+        run: ctest --test-dir build
