--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,3 +1,4 @@
+
 name: C++ Tests
 
 on: [push, pull_request]
@@ -20,3 +21,9 @@ jobs:
 
       - name: Run tests
         run: ctest --test-dir build
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: build/test-results/*.xml
