--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Install dependencies
         run: sudo apt update && sudo apt install -y cmake g++ googletest
 
+      - name: Create test results directory
+        run: mkdir -p build/test-results
+
       - name: Configure CMake
         run: cmake -B build -S lab
 
@@ -23,9 +26,10 @@ jobs:
       - name: Run tests and generate XML result
         run: |
           ctest --test-dir build --output-on-failure
+          ctest --test-dir build --output-on-failure -T Test --gtest_output=xml:build/test-results/test_results.xml
 
-      - name: List contents of build directory
-        run: ls -R build/
+      - name: List build/test-results contents
+        run: ls -R build/test-results/
 
       - name: Upload test results
         uses: actions/upload-artifact@v4
