--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -4,34 +4,37 @@ on: [push, pull_request]
 
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Install dependencies
-        run: sudo apt update && sudo apt install -y cmake g++ googletest
+    - name: Install dependencies
+      run: sudo apt-get update && sudo apt-get install -y g++
 
-      - name: Create test results directory
-        run: mkdir -p build/test-results
+    - name: Compile the C++ program
+      run: g++ -o main main.cpp -lm
 
-      - name: Configure CMake
-        run: cmake -B build -S lab
+    - name: Upload binary as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: compiled-binary
+        path: main
 
-      - name: Build
-        run: cmake --build build
+  test:
+    runs-on: ubuntu-latest
+    needs: build
 
-      - name: Run tests and generate XML result
-        run: |
-          ctest --test-dir build --output-on-failure
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: List build/test-results contents
-        run: ls -R build/test-results/
+    - name: Download compiled binary
+      uses: actions/download-artifact@v3
+      with:
+        name: compiled-binary
 
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: build/test-results/*.xml
+    - name: Run the program
+      run: chmod +x main && ./main
