--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,7 @@ jobs:
       run: sudo apt-get update && sudo apt-get install -y g++
 
     - name: Compile the C++ program
-      run: g++ -o main Source.cpp -lm
+      run: g++ -o Source.cpp -lm
 
     - name: Upload binary as artifact
       uses: actions/upload-artifact@v4
