--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: build Source.cpp
-        run: clang++ -std=c++11 -c Source.cpp -o Source.o
+        run: clang++ -std=c++11 -c lab/Source.cpp -o Source.o
       
       - name: build test.cpp
         run: clang++ -std=c++11 -c test.cpp -o test.o 
