--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
         run: clang++ -std=c++11 -c lab/Source.cpp -o Source.o
       
       - name: build test.cpp
-        run: clang++ -std=c++11 -c test.cpp -o test.o 
+        run: clang++ -std=c++11 -c lab/test.cpp -o test.o 
       
       - name: link
         run: clang++ Source.o test.o -o test  
