--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -23,10 +23,10 @@ jobs:
         run: mkdir -p results
 
       - name: run tests
-        run: ./test --outputFile=results/results.cpp
+        run: ./test
         
       - name: Test artifact
         uses: actions/upload-artifact@v4
         with:
           name: results
-          path: results/results.cpp
+          path: test.txt
